--- a/notebooks/03_modeling_single_layer_nn.ipynb
+++ b/notebooks/03_modeling_single_layer_nn.ipynb
@@ -38,13 +38,7 @@
       "\n",
       "Epoch 84: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
       "\n",
-      "Epoch 84: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
-      "\n",
       "Epoch 89: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 89: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 94: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n",
       "\n",
       "Epoch 94: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n"
      ]
@@ -60,7 +54,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n",
       "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
      ]
     },
@@ -98,13 +91,7 @@
       "\n",
       "Epoch 63: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
       "\n",
-      "Epoch 63: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
-      "\n",
       "Epoch 68: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 68: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 73: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n",
       "\n",
       "Epoch 73: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n"
      ]
@@ -120,8 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
      ]
     },
     {
@@ -158,13 +144,7 @@
       "\n",
       "Epoch 94: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
       "\n",
-      "Epoch 94: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
-      "\n",
       "Epoch 99: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 99: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 104: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n",
       "\n",
       "Epoch 104: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n"
      ]
@@ -180,22 +160,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x0000029C844260C0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x0000021559602F20> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x0000029C844260C0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x0000021559602F20> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
      ]
     },
     {
@@ -232,25 +211,13 @@
       "\n",
       "Epoch 172: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
       "\n",
-      "Epoch 172: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
-      "\n",
       "Epoch 178: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 178: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
-      "Epoch 183: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n",
       "\n",
       "Epoch 183: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n",
       "\n",
       "Epoch 188: ReduceLROnPlateau reducing learning rate to 3.125000148429535e-05.\n",
       "\n",
-      "Epoch 188: ReduceLROnPlateau reducing learning rate to 3.125000148429535e-05.\n",
-      "\n",
       "Epoch 193: ReduceLROnPlateau reducing learning rate to 1.5625000742147677e-05.\n",
-      "\n",
-      "Epoch 193: ReduceLROnPlateau reducing learning rate to 1.5625000742147677e-05.\n",
-      "\n",
-      "Epoch 198: ReduceLROnPlateau reducing learning rate to 1e-05.\n",
       "\n",
       "Epoch 198: ReduceLROnPlateau reducing learning rate to 1e-05.\n"
      ]
@@ -266,22 +233,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x0000029C86B84A40> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000002155968EFC0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x0000029C86B84A40> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:5 out of the last 17 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000002155968EFC0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n",
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
      ]
     },
     {
@@ -318,10 +284,6 @@
       "\n",
       "Epoch 100: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
       "\n",
-      "Epoch 100: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
-      "\n",
-      "Epoch 105: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
-      "\n",
       "Epoch 105: ReduceLROnPlateau reducing learning rate to 0.0001250000059371814.\n",
       "\n",
       "Epoch 110: ReduceLROnPlateau reducing learning rate to 6.25000029685907e-05.\n",
@@ -344,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n"
      ]
     },
     {
@@ -403,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step \n"
+      "\u001b[1m8/8\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
      ]
     },
     {
